# glove

./: .env.example  .gitignore  README.md  pyproject.toml
bot/: __init__.py  config.py  db.py  enums.py  main.py  models.py  seed.py  texts.py
bot/handlers/: admin.py  common.py  errors.py  feedback.py  invitations.py  mail.py  matches.py  profile.py  search.py  stats.py
bot/jobs/: scheduler.py
bot/keyboards/: main.py
bot/services/: admin.py  elo.py  feedback.py  invitations.py  mail.py  matches.py  notifications.py  profile.py  search.py  stats.py
debian/: README.md  glove-bot.service  install_python312.sh  install_systemd.sh  run.sh  setup.sh  update_from_git.sh
glove_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
seeds/: clubs.seed.json  users.seed.json
ubuntu/: README.md  install_systemd.sh  run.sh  setup.sh
